# game-server-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: controllers.rs  main.rs  models.rs
src/character_controller/: mod.rs
src/controllers/: character.rs  game.rs
src/game_controller/: mod.rs
src/game_models/: mod.rs
