[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.2"}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.114"
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }


[dependencies.uuid] 
version = "1.8.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]
